RESOLVED FIXED177531
REGRESSION (r222040): Crash navigating out of gfycat.com url
https://bugs.webkit.org/show_bug.cgi?id=177531
Summary REGRESSION (r222040): Crash navigating out of gfycat.com url
Antti Koivisto
Reported 2017-09-27 04:42:18 PDT
Attachments
patch (8.09 KB, patch)
2017-09-27 04:54 PDT, Antti Koivisto
ggaren: review+
Antti Koivisto
Comment 1 2017-09-27 04:44:46 PDT
Antti Koivisto
Comment 2 2017-09-27 04:54:26 PDT
Geoffrey Garen
Comment 3 2017-09-27 08:03:18 PDT
Comment on attachment 321954 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=321954&action=review r=me > Source/WebCore/dom/ElementRareData.h:111 > + void setHasCSSAnimation(bool b) { m_hasCSSAnimation = b; } WebKit style says the argument name should be "hasCSSAnimation".
Antti Koivisto
Comment 4 2017-09-27 08:33:30 PDT
Antti Koivisto
Comment 5 2017-09-27 08:35:53 PDT
> WebKit style says the argument name should be "hasCSSAnimation". That seems bit redundant. I called it 'value' which looks like a Common WebKit Pattern.
Note You need to log in before you can comment on or make changes to this bug.